{
    "name": "FourPlayer",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "8d15a0fa-6e9f-4c04-bb84-938d490f94d1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6c5124ad-1627-4c6c-bcbe-fb692c6f98b5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "96b8f9fd-2c24-4ba5-b615-c6fde0c64f10",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}